# PKMN_Engine

./: CMakeLists.txt
data/: gen1.json
headers/: data.hpp
src/: main.cpp
src/data/: data.cpp
tools/: generate.cpp  orderingScript.py
